--- a/src/index.css
+++ b/src/index.css
@@ -38,12 +38,15 @@ article{
   align-items: center;
   justify-content: flex-start;
   gap: 1em;
+  box-shadow: 0 0.3em 0.5em rgba(0, 0, 0, 0.3);
+  padding: 0.5em;
 }
 article img{
   width: 5em;
   height: 5em;
   object-fit: cover;
   border-radius: 50%;
+  box-shadow: 0 0.3em 0.5em rgba(0, 0, 0, 0.3);
 }
 article div h3{
   margin-bottom: 0.5em;
