--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,11 @@ article img{
   box-shadow: 0 0.3em 0.5em rgba(0, 0, 0, 0.3);
 }
 article div h3{
-  margin-bottom: 0.5em;
+  margin-bottom: 0.3em;
+}
+article div p{
+  width: 100%;
+  font-size: 0.85em;
 }
 .btn{
   display: block;
